extra space fixed with overflow and blur added

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     height: 100vh;
     width: 100vw;
     padding: 0;
+    overflow-x: hidden;
   }
 
   .container {
@@ -19,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     z-index: 1;
+    overflow-x: hidden;
   }
 
   .mobile-squeleton {
@@ -50,18 +52,15 @@
     position: fixed;
     left: 0;
     right: 0;
-    top: -15px;
+    top: 0;
     bottom: 0;
-    height: 100vh;
+    height: 95vh;
     width: 100vw;
-    background-color: #6070ff;
-    mix-blend-mode: darken;
-    background-image: url('images/menu-barBg.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    flex-direction: column;
-    z-index: 10;
-    opacity: 1;
+    background-color: rgba(96, 112, 255, 0.8);
+    -moz-backdrop-filter: blur(4px);
+    -mebkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px); 
+    overflow-x: hidden;
     -webkit-animation: start 0.8s ease-in;
     animation: start 0.8s ease-in;
   }
@@ -105,7 +104,7 @@
 
   .hamburgeur li:nth-child(2) {
     position: absolute;
-    top: 80px;
+    top: 95px;
     left: 28px;
     font-family: 'Poppins', serif;
     font-style: normal;
@@ -118,7 +117,7 @@
 
   .hamburgeur li:nth-child(3) {
     position: absolute;
-    top: 110px;
+    top: 140px;
     left: 28px;
     font-family: 'Poppins', serif;
     font-style: normal;
@@ -143,6 +142,9 @@
 
   .hamburgeur li a {
     color: #fff;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 44px;
   }
 
   .main {
@@ -630,14 +632,12 @@
     right: 0;
     top: -15px;
     bottom: 0;
-    height: 100vh;
+    height: 95vh;
     width: 100vw;
-    background-color: #6070ff;
-    mix-blend-mode: darken;
-    background-image: url('images/menu-barBg.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    flex-direction: column;
+    background-color: rgba(96, 112, 255, 0.8);
+    -moz-backdrop-filter: blur(4px);
+    -mebkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(4px);
     z-index: 10;
     opacity: 1;
     -webkit-animation: start 0.8s ease-in;
@@ -671,7 +671,7 @@
 
   .hamburgeur li:nth-child(2) {
     position: absolute;
-    top: 80px;
+    top: 95px;
     left: 28px;
     font-family: 'Poppins', serif;
     font-style: normal;
@@ -684,7 +684,7 @@
 
   .hamburgeur li:nth-child(3) {
     position: absolute;
-    top: 110px;
+    top: 130px;
     left: 28px;
     font-family: 'Poppins', serif;
     font-style: normal;
@@ -721,6 +721,9 @@
 
   .hamburgeur li a {
     color: #fff;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 44px;
   }
 
   .mobile-squeleton .header .header-menu {
